[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftshield-mini"
version = "0.1.1"
description = "Real-time behavioural drift detection for agentic AI systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DriftShield"}
]
keywords = ["ai", "agents", "monitoring", "drift-detection", "langchain", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1.0"]

[project.scripts]
driftshield = "driftshield.cli:cli"

[project.urls]
Homepage = "https://github.com/driftshield/driftshield-mini"
Issues = "https://github.com/driftshield/driftshield-mini/issues"

[tool.setuptools.packages.find]
include = ["driftshield*"]

[tool.ruff]
line-length = 100
target-version = "py310"
